# poses_comparator

./: .gitignore  README.md
comparator/: README.md  comparator.py
comparator/json/: groundTruth1.txt  groundTruth2.txt  groundTruth3.txt  groundTruth4.txt  openpose1.txt  openpose2.txt  openpose3.txt  openpose4.txt
ground_truth_estimator/: .gitignore  CMakeLists.txt  README.md
ground_truth_estimator/src/: FakeKinectDriver.cpp  FakeKinectDriver.h  IKinectDriver.h  core.cpp
tf-pose-estimation/: .gitignore  pip-selfcheck.json  run.py
tf-pose-estimation/src/: estimator.py  exportData.py  network_personlab.py  run_directory_json.py
tf-pose-estimation/tf_pose/: estimator.py
